# streamware

./: .env.backup  .env.bak  .env.example  .gitignore  ARCHITECTURE.md  BUILD_COMMANDS.md  CHANGELOG.md  COMPLETE_STATUS.md  DETECTION_MATRIX.md  Dockerfile  Dockerfile.cross_platform  Dockerfile.test  EXAMPLES_DOCUMENTATION.md  FINAL_STATUS.md  FIX_X11_DISPLAY.md  LICENSE  MANIFEST.in  MEDIA_GUIDE.md  Makefile  PUBLISHING.md  QUICK_FIX.sh  QUICK_START.md  README.md  REFACTORING.md  SUMMARY.md  TESTS_COMPLETE.md  TESTS_SUMMARY.md  TEST_GUIDE.md  TODO.md  VERSION_SUMMARY.md  VOICE_AUTOMATION_GUIDE.md  VSCODE_BOT_GUIDE.md  deploy_vscode_bot.sh  docker-compose.yml  examples.py  examples_advanced_communication.py  examples_communication.py  fix_and_test.sh  install_bot_deps.sh  install_fast_model.sh  (+16 more)
demos/tracking_benchmark/: README.md  requirements.txt  tracker_demo.py
desktop/: README.md  setup.sh
desktop/python/: README.md  (+3 more)
desktop/rust/voice-shell-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/rust/voice-shell-app/src-tauri/icons/: icon.icns
desktop/rust/voice-shell-app/src-tauri/src/: commands.rs  main.rs  server.rs
docker/: README.md  SERVICES_README.md  docker-compose-extended.yml  examples-advanced.sh  init-db.sql  mockoon-data.json  test-basic.sh  test-streaming.sh
docs/: ACCOUNTING.md  API.md  ARCHITECTURE.md  BYTETRACK_EXAMPLES.md  CLI_USAGE.md  COMMUNICATION.md  CONFIGURATION.md  DEPLOY_COMPONENT.md  DSL_EXAMPLES.md  LIVE_NARRATOR_ARCHITECTURE.md  LLM_COMPONENT.md  LLM_INTEGRATION.md  LLM_SHELL.md  MOTION_ANALYSIS.md  MOTION_ANALYSIS_IMPROVEMENTS.md  MOTION_PLAYER_SESSION.md  MQTT_PUBLISHER.md  NATURAL_LANGUAGE_CONFIG.md  OBJECT_TRACKER_BYTETRACK.md  OPTIMIZATION_ANALYSIS.md  PERFORMANCE.md  PROJECT_ANALYSIS.md  QUICKSTART.md  QUICK_CLI.md  README.md  REALTIME_STREAMING.md  REALTIME_VISUALIZER.md  REFACTORING_PLAN.md  SSH_COMPONENT.md  TESTING.md  USAGE_GUIDE.md  USB_ISO_BUILDER.md  VOICE_SHELL.md
environments/: README.md
examples/: QUICKSTART.md  README.md  __init__.py  advanced_patterns.py  app_creation_examples.sh  basic_usage.py  deploy_examples.py  dsl_examples.py  llm_examples.py  media_analysis_examples.sh  quick_cli_demo.sh  quick_start_example.sh  ssh_examples.py  text2streamware_examples.py  voice_automation_examples.sh
myapp/: README.md  app.py
scripts/: analyze_dependencies.py
streamware/: ARCHITECTURE.md  __init__.py  accounting_web.py  analysis_exporter.py  animal_detector.py  archive_mixin.py  async_llm.py  bytetrack.py  camera_utils.py  cli.py  cli_handlers_apps.py  cli_handlers_io.py  cli_handlers_live.py  cli_handlers_misc.py  cli_handlers_monitoring.py  cli_handlers_stream.py  cli_handlers_watch.py  concurrent_frame_processor.py  config.py  context_builder.py  core.py  detection_mixin.py  detection_pipeline.py  diagnostics.py  doctr_detector.py  document_classifier.py  document_detectors.py  dsl.py  dsl_streamer_process.py  dsl_timing_logger.py  dsl_visualizer.py  duplicate_mixin.py  exceptions.py  fast_capture.py  frame_capture.py  frame_diff_dsl.py  frame_optimizer.py  function_registry.py  handler.py  helpers.py  (+51 more)
test/: README.md  app.py
test2/: README.md  app.py
tests/: __init__.py  conftest.py  mock_ollama.py  test_communication.py  test_config_provider.py  test_desktop_apps.py  test_e2e_integration.py  test_extended.py  test_integration_simple.py  test_live_narrator_integration.py  test_llm_components.py  test_llm_edge_cases.py  test_llm_integration.py  test_object_tracker_bytetrack.py  test_quick_cli_config.py  test_scanner_performance.py  test_tracker_simple.py  test_voice_shell_gui.py  test_voice_shell_gui_e2e.py
(+239 files in other folders)
