[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamware"
version = "0.2.77"
description = "Modern Python stream processing framework inspired by Apache Camel"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Softreck", email = "info@softreck.com"},
]
keywords = ["stream", "processing", "camel", "workflow", "pipeline", "curllm", "rtsp", "kafka", "rabbitmq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "jsonpath-ng>=1.5.0",
]

[project.optional-dependencies]
curllm = ["ollama", "playwright", "beautifulsoup4", "lxml"]
kafka = ["kafka-python>=2.0.0"]
rabbitmq = ["pika>=1.3.0"]
postgres = ["psycopg2-binary>=2.9.0", "sqlalchemy>=2.0.0"]
multimedia = ["opencv-python>=4.8.0", "av>=10.0.0", "numpy>=1.24.0"]
communication = [
    "python-telegram-bot>=20.0.0",
    "twilio>=8.0.0",
    "slack-sdk>=3.19.0",
    "discord.py>=2.3.0",
    "vonage>=3.3.0",
    "plivo>=4.38.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = ["streamware[curllm,kafka,rabbitmq,postgres,multimedia,communication,dev]"]

[project.urls]
Homepage = "https://github.com/stream-ware/streamware"
Documentation = "https://streamware.readthedocs.io"
Repository = "https://github.com/stream-ware/streamware"
"Bug Tracker" = "https://github.com/stream-ware/streamware/issues"

[project.scripts]
streamware = "streamware.cli:main"
stream-handler = "streamware.handler:main"
sq = "streamware.quick_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamware*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=streamware --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
