[package]
name = "voice-shell-app"
version = "1.0.0"
description = "Streamware Voice Shell Desktop Application"
authors = ["Streamware Team"]
license = "MIT"
repository = "https://github.com/stream-ware/streamware"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
notify-rust = "4"
dirs = "5"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
